alignment fixed

--- a/src/app/main/company/company.component.scss
+++ b/src/app/main/company/company.component.scss
@@ -18,6 +18,14 @@
   margin-bottom: 40px;
 }
 
-.box > * {
-  flex: 1 1 160px;
+@media only screen and (max-width: 767px) {
+    .box > * {
+        flex: 1 1 120px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .box > * {
+        flex: 1 1 160px;
+    }
 }
